// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/uniq should initialize 1`] = `
Object {
  "state": Object {
    "data": undefined,
    "initialized": false,
  },
}
`;

exports[`middlewares/uniq should reset state 1`] = `
Object {
  "action": Object {
    "type": "@trampss/RESET_TESTPREFIX",
  },
  "state": Object {
    "data": undefined,
    "initialized": false,
  },
}
`;

exports[`middlewares/uniq should set element [elm2] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    "type": "@trampss/SET_TESTPREFIX",
  },
  "state": Object {
    "data": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    "initialized": true,
  },
}
`;

exports[`middlewares/uniq should update element 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "modifi": "cation",
      "some": "other 2",
    },
    "type": "@trampss/UPDATE_TESTPREFIX",
  },
  "state": Object {
    "data": Object {
      "code": "elm",
      "infos": "elm",
      "modifi": "cation",
      "some": "other 2",
    },
    "initialized": true,
  },
}
`;
